refactor: Rename project and simplify analysis
- Renames the project from "copy-of-bazi-lucky-color-analyst" to "lucky-color-analyst" in package.json and metadata.json.
- Removes the birth time input from the UI and defaults to 12:00 for calculations, simplifying the user experience.
- Streamlines the `results` state to only include `usefulElements`, as other fields were not being used in the UI.
- Removes unused imports and components (`BaziPillars`, `Search`, `Info`, `User`, `Calendar`, `Clock` icons).
- Deletes the Azure Static Web Apps CI/CD workflow file, as it is no longer relevant.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-bazi-lucky-color-analyst",
+  "name": "lucky-color-analyst",
   "private": true,
   "version": "0.0.0",
   "type": "module",
